Fixed spacing

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     font-size: 45px;
     position: relative;
-    left: 310px;
+    left: 320px;
     top: 60px;
     height: 50px;
     
